test/files/neg/tcpoly_variance.check
tcpoly_variance.scala:6: error: overriding def str: m[Object] (defined in class A);
 override def str: m[String] has incompatible type
 override def str: m[String]  = sys.error("foo") // since x in m[x] is invariant, ! m[String] <: m[Object]
              ^
one error found
